# routes/api.php
@@ -3,7 +3,7 @@
 use App\Http\Controllers\MatchScheduleController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\ScraperController;
+use App\Http\Controllers\TeamController;
 
 /*
 |--------------------------------------------------------------------------
@@ -20,7 +20,8 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 Route::group(['prefix' => 'v1'], function () {
-    Route::get('/team/{team}', [ScraperController::class, 'getTeamDetails']);
+    Route::get('/team/{team}', [TeamController::class, 'getTeamDetails']);
+    Route::get('/teams', [TeamController::class, 'getTeams']);
     Route::get('/match-schedule', [MatchScheduleController::class, 'index']);
     Route::get('/match-schedule/week/{week}', [MatchScheduleController::class, 'getMatchesByWeek']);
 });
