# routes/web.php
@@ -17,6 +17,3 @@ use Illuminate\Support\Facades\Route;
 Route::get('/', function () {
     return view('welcome');
 });
-Route::get('/scraper', [ScraperController::class, 'index']);
-Route::get('/team', [ScraperController::class, 'team']);
-Route::get('/team/{team}', [ScraperController::class, 'getTeam']);
